Calculator with all Buttons working

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			<button class="buttonNum"value="2">2</button>
 			<button class="buttonNum"value="3">3</button>
 			<button class="operator"value="-">-</button>
-			<button class="buttonClear"value="AC">AC</button>
+			<button class="buttonClear"value= '0'>AC</button>
 			<button class="equals" value="=">=</button>
-			<button class="operator"value="+">+</button>
+			<button class="operatorPlus"value="+">+</button>
 		</div>
 		<!-- <script src="js/calc.js"></script> -->
 	</body>
